--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.card {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  border: 2px solid #282c34;
+  margin: 10px 5px;
+}
+
+.card div > img {
+margin: 5px 10px;
+}
+
+.box {
+border: 2px solid #282c34;
+margin: 10px 5px;
+}
